[metadata]
name = symcpe.ironic
summary = Ironic POC replacement for openstack packages
description-file = README.rst
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Framework :: Setuptools Plugin,
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
author = Sergii Kashaba
author_email = sergii_kashaba@symantec.com

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    sym_ironic
