[metadata]
name = symcpe.ironic
namespace_packages=symcpe
summary = Ironic POC replacement for openstack packages
description-file = README.rst
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Framework :: Setuptools Plugin,
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
author = Sergii Kashaba
author_email = sergii_kashaba@symantec.com
version = 0.2.0

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
namespace_packages=symcpe
packages = symcpe


[entry_points]
neutron.ml2.mechanism_drivers =
    symcpe_fake_agent = symcpe.ironic.neutron.ml2driver:LinuxbridgeMechanismDriver
